--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fitnesstrackr",
+  "name": "fitnesstrackr-backend",
   "version": "1.0.0",
   "description": "an API for our new fitness empire, FitnessTrac.kr, using node, express, postgresql, and jQuery",
   "main": "server.js",
