--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "seed:dev": "nodemon ./db/seed.js",
     "seed": "node ./db/seed.js",
     "start:dev": "nodemon server.js",
-    "start": "node ./db/seed.js && server.js",
+    "start": "node ./db/seed.js && node server.js",
     "test": "jest --runInBand",
     "test:watch": "jest --runInBand --watchAll"
   },
